debug console jump line fixed

--- a/packages/inspector/src/components/Assets/Assets.css
+++ b/packages/inspector/src/components/Assets/Assets.css
@@ -21,6 +21,7 @@
   position: relative;
   align-items: center;
   justify-content: center;
+  min-height: 48px;
 }
 
 .Assets .Assets-buttons > div > div {
@@ -112,7 +113,9 @@
 
 .Assets .Assets-content {
   background: var(--tree-bg-color) !important;
-  height: 100%;
+  flex: 1;
+  overflow: hidden;
+  min-height: 0;
 }
 
 .Assets .Assets-content.Hide {
@@ -151,7 +154,7 @@
   gap: 2px;
   background: var(--base-18);
   border-radius: 6px;
-  padding: 2px;
+  padding: 6px 8px !important;
 }
 
 .Assets-view-toggle-btn {
